# aque

./: .gitignore  LICENSE  README.md  pyproject.toml
aque/: cli.py  config.py  desk.py  dir_history.py  history.py  monitor.py  run.py  state.py
aque/plugins/: __init__.py  aider.py  claude.py  codex.py  gemini.py  kiro.py  opencode.py
aque/widgets/: dir_picker.py
config/: default.yaml
demo/: config.yaml  demo.cast  fake_agent.py  record.sh
docs/superpowers/plans/: 2026-04-09-background-launch.md  2026-04-11-mobile-adaptive-layout.md
docs/superpowers/specs/: 2026-04-09-background-launch-design.md  2026-04-11-mobile-adaptive-layout-design.md
features/: agent_lifecycle.feature  auto_attach.feature  dashboard.feature  detach_workflow.feature  hook_installation.feature  idle_detection.feature  new_agent.feature
tests/: conftest.py  test_config.py  test_desk.py  test_dir_history.py  test_dir_picker.py  test_history.py  test_integration.py  test_monitor.py  test_plugins.py  test_run.py  test_state.py
tests/steps/: conftest.py  test_agent_lifecycle.py  test_auto_attach.py  test_dashboard.py  test_detach_workflow.py  test_hook_installation.py  test_idle_detection.py  test_new_agent.py
