[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aque"
version = "0.0.3"
description = "A tmux-based agent queue manager. You sit at the desk, agents come to you."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["tmux", "agent", "ai", "cli", "queue", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
]
dependencies = [
    "textual>=0.47.0",
    "libtmux>=0.37.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
]

[project.scripts]
aque = "aque.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/can-can/aque"
Repository = "https://github.com/can-can/aque"
Issues = "https://github.com/can-can/aque/issues"
